# visamp

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  NEWS  README.md  clean.sh  configure.ac
src/: Makefile.am
src/libimrec/: BasicDummyFrameGrabber.hh  BasicFrameGrabber.hh  BasicLinuxFrameGrabber.cc  BasicLinuxFrameGrabber.hh  BasicLinuxFrameGrabber.icc  BasicLinuxFrameGrabber_v4l2.cc  BasicLinuxFrameGrabber_v4l2.hh  BasicSGIFrameGrabber.cc  BasicSGIFrameGrabber.hh  BasicSGIFrameGrabber.icc  BlueScreen.hh  BlueScreen.icc  BlueScreenWid.cc  BlueScreenWid.hh  BsDistance.hh  BsDistance.icc  CenterOfGravityFeatureVec.hh  CenterOfGravityFeatureVec.icc  CheckedIter.hh  CheckedIter.icc  ConstantColor.hh  ConstantColor.icc  ConversionTables.cc  ConversionTables.hh  FastImageDisplayWid.cc  FastImageDisplayWid.hh  FastImageDisplayWid.icc  FileFrameGrabber.cc  FileFrameGrabber.hh  FileFrameGrabber.icc  FrameGrabberError.hh  HistFeatureVec.cc  HistFeatureVec.hh  HistFeatureVec.icc  Image.hh  Image.icc  ImageButton.cc  ImageButton.hh  ImageOverlayWid.hh  Makefile.am  (+33 more)
src/visamp/: Makefile.am  MyImageButtons.cc  MyImageButtons.hh  MyRecognizer.cc  MyRecognizer.hh  MySlider.cc  MySlider.hh  VisAmpWid.cc  VisAmpWid.hh  test.bpm  visamp.cc
